--- a/index-poring-edit.html
+++ b/index-poring-edit.html
@@ -25,7 +25,7 @@
 	            <div class="text-left header-left bg-success col-md-6">
 			       <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
 			    </div>
-			    <div class="text-right header-right bg-primary col-md-6"> 
+			    <div class="text-right header-right bg-primary col-md-6">
 			        <ul>
 			            <li> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="40" height="40"></li>
 			            <li> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="40" height="40"></li>
@@ -61,26 +61,28 @@
           </ul>
         </div>
       </nav>
-   
+
      <!--  ======= BEGIN VIDEOS  ========= -->
      <div class="bg-success">
       <div class="videos-zone">
            <div class="homepage-hero-module">
 			    <div class="video-container">
 			        <div class="filter"></div>
-			        <video autoplay loop class="fillWidth">
-			            <source src="assets/videos/discussing_features.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-			            <source src="assets/videos/discussing_features.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-			        </video>
+              <video id="video1" class="video-js vjs-default-skin center-block" controls preload="auto" poster="assets/img/bg-photo.jpg center-block">
+								<source src="assets/videos/discussing_features.mp4" type="video/mp4" />
+								<p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that
+									<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+								</p>
+							</video>
 			        <div class="poster hidden">
-			            <img src="assets/videos/discussing_features.jpg" alt="">
+			            <img src="" alt="">
 			        </div>
                  </div>
             </div>
       </div>
     </div>
      <!--  ======= END VIDEOS  ========= -->
-     
+
 
     <!--  ======= BEGIN HISTORY SUCESS ========= -->
 
@@ -151,7 +153,7 @@
     <script src="assets/js/vendor/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-    	
+
     	//jQuery is required to run this code
 $( document ).ready(function() {
 
@@ -218,7 +220,7 @@ function scaleBannerVideoSize(element){
     </script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <!-- BEGIN EXTEND JAVASCRIPT-->
-<!--     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script type="text/javascript" src="assets/js/gmaps.js"></script> -->
     <!--Map Marker-->
