--- a/index.html
+++ b/index.html
@@ -1,87 +1,95 @@
-<!doctype html>
+<!--doctype html-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="assets/favicon.ico">
 
     <title>Success media : หน้าหลัก</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
-
     <!-- Custom styles for this template -->
     <link href="assets/css/carousel.css" rel="stylesheet">
+     <link href="assets/css/success-style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
-      <!-- headerv-->
+      <!-- ====== BEGIN HEADER ======= -->
     <header>
-        <div class="text-left mx-auto header-zone">
-        <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
-          <div class="text-right mx-auto header-zone">
-              <div class="col-lg-11 mb-3">
-              <a class="navbar-brand" href="#">
-              <img class="d-inline-block align-top" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="40" height="40">
-              www.facebook.com/sc.media.cm </a></div>
-          <div class="text-right ms-auto header-zone">
-          <div class="col-lg-11 mb-3">
-          <a class="navbar-brand" href="#">
-          <img class="d-inline-block align-top" src="assets/img/line-icon.jpg" alt="line-icon" width="40" height="40">
-          jookkook </a></div>
-              <div class="text-right ms-auto header-zone">
-              <div class="col-lg-11 mb-3">
-              <a class="navbar-brand" href="#">
-              <img class="d-inline-block align-top" src="assets/img/phone-icon.png" alt="phone-icon" width="40" height="40">
-              053-327044 </a></div>
-              </div>
-            </div>
-          </div>
+        <div class="header-zone bg-white">
+           <div class="row">
+	            <div class="text-left header-left bg-BG1 col-md-6">
+			       <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+			    </div>
+			    <div class="text-right header-right bg-white col-md-6">
+			        <ul>
+			            <li> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="40" height="40"></li>
+			            <li> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="40" height="40"></li>
+			            <li> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="40" height="40"></li>
+			        </ul>
+			    </div>
+		    </div>
         </div>
     </header>
-      <!-- End headerv-->
+     <!-- ====== END HEADER ====== -->
 
-      <!-- navbar-->
       <nav class="navbar navbar-expand-md navbar-dark bg-primary">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <div class="container">
-          <ul class="navbar-nav mr-auto justify-content-center">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">หน้าหลัก<span class="sr-only">(current)</span></a>
+        <div class="collapse navbar-collapse justify-content-md-center" id="navbarCollapse">
+          <ul class="navbar-nav ">
+            <li class="nav-item active px-5">
+              <a class="nav-link" href="#">หน้าหลัก</a>
+            </li>
+            <li class="nav-item px-5">
+              <a class="nav-link" href="#">บริการ</a>
+            </li>
+            <li class="nav-item dropdown px-5">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarCollapse" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    ผลงาน</a><span class="sr-only">(current)</span>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">ไวนิล</a>
+                    <a class="dropdown-item" href="#">สติ๊กเกอร์</a>
+                    <a class="dropdown-item" href="#">ตู้ไฟ</a>
+                    <a class="dropdown-item" href="#">นามบัตร</a>
+                    <a class="dropdown-item" href="#">โครงเหล็ก</a>
+                  </div>
+            </li>
+            <li class="nav-item px-5">
+              <a class="nav-link px-5" href="#">เกี่ยวกับ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">บริการ<span class="sr-only">(current)</span></a>
-            </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  ผลงาน</a><span class="sr-only">(current)</span>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">ไวนิล</a>
-                  <a class="dropdown-item" href="#">สติ๊กเกอร์</a>
-                  <a class="dropdown-item" href="#">ตู้ไฟ</a>
-                  <a class="dropdown-item" href="#">นามบัตร</a>
-                  <a class="dropdown-item" href="#">โครงเหล็ก</a>
-                </div>
-              </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">เกี่ยวกับ</a><span class="sr-only">(current)</span>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">ติดต่อ</a><span class="sr-only">(current)</span>
+              <a class="nav-link px-5" href="#">ติดต่อ</a>
             </li>
           </ul>
         </div>
-        </div>
       </nav>
 
-      <!-- End navbar-->
-
+      <!--  ======= BEGIN VIDEOS  ========= -->
+      <div class="bg-success">
+       <div class="videos-zone">
+            <div class="homepage-hero-module">
+           <div class="video-container">
+               <div class="filter"></div>
+               <video id="video1" class="video-js vjs-default-skin center-block" controls preload="auto" poster="assets/img/bg-photo.jpg center-block">
+                 <source src="assets/videos/discussing_features.mp4" type="video/mp4" />
+                 <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that
+                   <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                 </p>
+               </video>
+               <div class="poster hidden">
+                   <img src="" alt="">
+               </div>
+                  </div>
+             </div>
+       </div>
+      </div>
+      <!--  ======= END VIDEOS  ========= -->
+      
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -129,20 +137,19 @@
           <span class="sr-only">Next</span>
         </a>
   </div>
-      <!-- Marketing messaging and featurettes
-      ================================================== -->
-      <!-- Wrap the rest of the page in another container to center all the content. -->
 
-      <div class="container marketing">
 
-        <!-- Three columns of text below the carousel -->
-        <div class="">
-          <div class="container marketing">
-            <h1 class="display-4 text-center">ประวัติร้าน</h1>
+    <!--  ======= BEGIN HISTORY SUCESS ========= -->
+
+      <div class="history-zone bg-white">
+          <div class="container py-5">
+            <h1 class="display-3 text-center my-3">ประวัติร้าน</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+          </div>
       </div>
+
+    <!--  ======= END HISTORY SUCESS ========= -->
+
         <!-- START THE FEATURETTES -->
                     <div class="container">
                       <h1 class="display-4 text-center">ผลงาน</h1>
