--- a/contact.html
+++ b/contact.html
@@ -73,13 +73,25 @@
             <hr>
             <div class="container">
               <div class=" col-lg-4 container mb-12">
-                  <a href="assets/img-contact/boss.jpg" class="image-link" >
-                  <img src="assets/img-contact/boss.jpg" class="img-fluid" alt="Image 1">
+                <a href="assets/img-contact/boss.jpg" class="image-link" >
+                <img src="assets/img-contact/boss.jpg" class="img-fluid" alt="Image 1">
                 </a>
-                <div class="text-center font-special-style display-4 text-success1"><p>เจ้าของกิจการ</p></div>
+                  <div class="text-center font-special-style display-4 text-success1">
+                  <h1>เจ้าของกิจการ</h1></div>
+                  <div class="text-center font-special-style text-success1">
+                  <h1>คุณยอดชัย ผดุงศฺลป์</h1></div>
+                  <br>
+                    <div class="col-lg-12">
+                    <div class="text-left font-special-style text-success1">
+                    <h1>ที่อยู่ : 17/3 ถนนจ่าบ้าน ตำบลศรีภูมิ อำเภอเมือง จังหวัดเชียงใหม่</h1>
+                    <h1>Tel : 053-327044</h1>
+                    <h1>Line : vhan5581</h1>
+                    <h1>Facebook : www.facebook.com/sc.media.cm</h1>
+                    </div>
+                   </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
           <!--END ITEM-->
           <div class="bg-footer">
             <div class="container pb-3">
